--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8">
+		<meta charset="UTF-8">
 	   	<title>Airbnb clone</title>
 	</head>
 	<body style="margin: 0px; padding: 0px;">
-		<header style="color: #FF0000; height: 70px; width: 100%;">
+		<header style="background-color: #FF0000; height: 70px; width: 100%;">
 		</header>
 
-		<footer style="color: #00FF00; height: 60px; width: 100%; display: flex; justify-content: center; position: fixed; text-align: center; bottom: 0;">
+		<footer style="background-color: #00FF00; height: 60px; width: 100%; display: flex; justify-content: center; position: fixed; text-align: center; bottom: 0; color: black;">
 		<p>Best School</p>
 		</footer>
 	</body>
