--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -12,12 +12,13 @@
 			header {
                                 background-color: #FF0000;
                                 height: 70px;
-				width: 100px;
+				width: 100%;
                         }
 			footer {
 				background-color: #00FF00;
+				color: black;
 				height: 60px;
-				width: 100px;
+				width: 100%;
 				text-align: center;
 				position: fixed;
 				display: flex;
