--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -19,7 +19,7 @@
                                 <div class="locations">
                                         <h3>States</h3>
                                         <h4>California, New york, Dallas...</h4>
-					<ul class="poppver">
+					<ul class="popover">
 						<li>
 							<h2>
 								States:
@@ -41,11 +41,12 @@
                                                                 <li>Rabat</li>
                                                         </ul>
                                                 </li>
+					</ul>
                                 </div>
                                 <div class="amenities">
                                         <h3>Amenities</h3>
                                         <h4>Parking, Wifi...</h4>
-					<ul class="popover_list">
+					<ul class="popover">
 						<li>WiFi</li>
                                                 <li>Parking</li>
 						<li>Kitchen</li>
