--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -20,7 +20,7 @@
                                 <div class="locations">
                                         <h3>States</h3>
                                         <h4>California, New york, Dallas...</h4>
-                                        <ul class="poppver">
+                                        <ul class="popover">
                                                 <li>
                                                         <h2>
                                                                 States:
@@ -42,7 +42,9 @@
                                                                 <li>Rabat</li>
                                                         </ul>
                                                 </li>
+					</ul>
                                 </div>
+
                                 <div class="amenities">
                                         <h3>Amenities</h3>
                                         <h4>Parking, Wifi...</h4>
@@ -52,7 +54,7 @@
                                                 <li>Kitchen</li>
                                         </ul>
                                 </div>
-                        <section>
+                        </section>
 
 			<section class="places">
 			<div class="places_title">
@@ -60,7 +62,7 @@
 			</div>
 			<div class="articles">
 				<article>
-					<h2>Tiny Home</h2>
+					<h2>My Home</h2>
 				</article>
 				<article>
                                         <h2>Tiny House</h2>
@@ -70,7 +72,6 @@
                                 </article>
 			</div>
 			</section>
-
 					
                 </div>
                 <footer>
